sawmill_api/lib/smsh/SMSHParser.py
# Generated from SMSH.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class SMSHParser(Parser):

    grammarFileName = "SMSH.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "'|'"]

    symbolicNames = ["<INVALID>", "COMMAND", "ESCAPED_STRING", "UNQUOTED", "PIPE", "WS"]

    RULE_pipeline = 0
    RULE_command = 1
    RULE_args = 2
    RULE_argument = 3

    ruleNames = ["pipeline", "command", "args", "argument"]

    EOF = Token.EOF
    COMMAND = 1
    ESCAPED_STRING = 2
    UNQUOTED = 3
    PIPE = 4
    WS = 5

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class PipelineContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SMSHParser.CommandContext)
            else:
                return self.getTypedRuleContext(SMSHParser.CommandContext, i)

        def EOF(self):
            return self.getToken(SMSHParser.EOF, 0)

        def PIPE(self, i: int = None):
            if i is None:
                return self.getTokens(SMSHParser.PIPE)
            else:
                return self.getToken(SMSHParser.PIPE, i)

        def getRuleIndex(self):
            return SMSHParser.RULE_pipeline

    def pipeline(self):

        localctx = SMSHParser.PipelineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_pipeline)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 8
            self.command()
            self.state = 13
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 4:
                self.state = 9
                self.match(SMSHParser.PIPE)
                self.state = 10
                self.command()
                self.state = 15
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 16
            self.match(SMSHParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommandContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMAND(self):
            return self.getToken(SMSHParser.COMMAND, 0)

        def args(self):
            return self.getTypedRuleContext(SMSHParser.ArgsContext, 0)

        def getRuleIndex(self):
            return SMSHParser.RULE_command

    def command(self):

        localctx = SMSHParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.match(SMSHParser.COMMAND)
            self.state = 20
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 2 or _la == 3:
                self.state = 19
                self.args()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SMSHParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(SMSHParser.ArgumentContext, i)

        def getRuleIndex(self):
            return SMSHParser.RULE_args

    def args(self):

        localctx = SMSHParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_args)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 22
                self.argument()
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == 2 or _la == 3):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESCAPED_STRING(self):
            return self.getToken(SMSHParser.ESCAPED_STRING, 0)

        def UNQUOTED(self):
            return self.getToken(SMSHParser.UNQUOTED, 0)

        def getRuleIndex(self):
            return SMSHParser.RULE_argument

    def argument(self):

        localctx = SMSHParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_argument)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            _la = self._input.LA(1)
            if not (_la == 2 or _la == 3):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
